--- a/index_01.html
+++ b/index_01.html
@@ -1,6 +1,10 @@
 <head>
-
+<meta charset="UTF-8">
 </head>
 <body>
-    <h1>Привет, Html!</h1>
+    <h1>Составьте предложения</h1>
+    <hr width="20%">
+    <p align="center">magna</p>
+    <p align="left">radix</p>
+    <p align="right">aorta</p>
 </body>
