--- a/html_11.html
+++ b/html_11.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
-язык html <="Ru-Ru">
-<руководитель>
-    кодировка meta <="UTF-8">
-    >title<Шаблон страницы</title>
-    name meta <="описание" content="Образец HTML5">
-    название мета <="автор" содержание= "из интернета">
-    относительная ссылка <="таблица стилей" href="css\styles.css">
-
+<html lang<="Ru-Ru">
+<head>
+    <meta <="UTF-8">
+    <title>Шаблон страницы</title>
+    <meta <="description" content="The HTML5 sample">
+    <meta <="author" content= "from internet">
+    <link <="stylesheet" href="css\styles.css">
+    
 </head>
-<тело>
-    выровнять заголовок <="center" style="цвет фона: светло-золотисто-желтый;">
-    >h1<Медицинский факультет</h1>
-    >h2<Кафедра медицины и экспериментальной биологии</h2>
+<body>
+    <header <="center" style="background-color:lightgoldenrodyellow;">
+    <h1>Медицинский факультет</h1>
+    <h2>Кафедра медицины и экспериментальной биологии</h2>
     <hr>
-    выровнять навигацию <="по центру" style="цвет фона: хаки;">
+    <nav <="center" style="background-color:khaki;">
  Меню:
        <ul>
         <li>
-            href a <="http://google.com ">Google</a>
+            <a href="http://google.com">Google</a>
         </li>
         <li>
-            href a <="http://yandex.com ">Яндекс</a>
+            <a href="http://yandex.com">Yandex</a>
         </li>
         <li>
-            href a <="http://rambler.ru ">Рамблер</a>
+            <a href="http://rambler.ru">Rambler</a>
         </li>
        </ul>
     </nav>
-</заголовок>
-    >p<Текст</p>
-    стиль нижнего колонтитула <="цвет фона: navajowhite;">
+</header>
+    <p>Текст</p>
+    <footer style="background-color:navajowhite;">
         <hr>
-        >p<Разработка - студенты 2-го курса</p>
-    <нижний колонтитул>
-    <сценарий>scr="js\scripts.js "</script>
-
+        <p>Разработка - студенты 2-го курса</p>
+    </footer>
+    <script>scr="js\scripts.js"</script>
+    
 </body>
 </html>
