--- a/html_08.html
+++ b/html_08.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
-язык html <="Ru-Ru">
-<руководитель>
-    кодировка meta <="UTF-8">
-    >title<Шаблон страницы</title>
-    name meta <="описание" content="Образец HTML5">
-    название мета <="автор" содержание= "из интернета">
-    относительная ссылка <="таблица стилей" href="css\styles.css">
-    <стиль>
- .письмо{
-            rgba:  цвет (144,105,10,0   .897);
-            140% : размер шрифта;
-            : положение относительно;
-            5 пикселей : сверху;
+<html lang="Ru-Ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Шаблон страницы</title>
+    <meta name="description" content="The HTML5 sample">
+    <meta name="author" content="from internet">
+    <link rel="stylesheet" href="css\styles.css">
+    <style>
+        .letter{
+            color: rgba(51, 13, 140, 0.835);
+            font-size: 140%;
+            position: relative;
+            top: 5px;
         }
-    </стиль>
-</голова>
-<тело>
-    выровнять div <="по центру" id="заголовок страницы" style="цвет фона: rgb(55, 190, 100);">
+    </style>
+</head>
+<body>
+    <div align="center" id="head-of-page" style="background-color:rgba(66, 147, 108, 0.332);">
         <h1>
-            класс span <="буква">З</span>
- аголовок</h1>
+            <span class="letter">З</span>
+            аголовок</h1>
         <hr>
     </div>
-    id div  <="content" style="background-color: blanchedalmond;">
+    <div  id="content" style="background-color:rgb(205, 238, 255);">
         <h2>
-            класс span <="буква">С</span>
- одержание</h2>
-        идентификатор div  <="боковая панель" style="плавающий: слева; ширина: 25%;">
+            <span class="letter">С</span>
+            одержание</h2>
+        <div  id="side-panel" style="float: left; width:25%;">
             <h3>
-                класс span <="буква">Б</span>
- оковая панель</h3>
+                <span class="letter">Б</span>
+                оковая панель</h3>
         </div>
-        идентификатор div  <="mein-text" style="float: слева;">
+        <div  id="mein-text" style="float: left;">
             <h3>
-                класс span <="буква">О</span>
- сновной текст</h3>
+                <span class="letter">О</span>
+                сновной текст</h3>
         </div>
-        стиль div <="очистить: слева;"></div>
+        <div style="clear: left;"></div>
     </div>
-    идентификатор div  <="нижний колонтитул страницы" style="цвет фона: rgba(130, 161, 219, 0.945);">
+    <div  id="foot-of-page" style="background-color:rgba(160, 208, 243, 0.945);">
         <h2>
-            класс span <="буква">П</span>
- одвал</h2>
+            <span class="letter">П</span>
+            одвал</h2>
     </div>
-    >p<Текст</p>
-    <сценарий>scr="js\scripts.js "</script>
+    <p>Текст</p>
+    <script>scr="js\scripts.js"</script>
     
 </body>
 </html>
