--- a/html_09.html
+++ b/html_09.html
@@ -1,31 +1,31 @@
-!DOCTYPE html>
-язык html <="Ru-Ru">
-<руководитель>
-    кодировка meta <="UTF-8">
-    >title<Шаблон страницы</title>
-    name meta <="описание" content="Образец HTML5">
-    название мета <="автор" содержание= "из интернета">
-    относительная ссылка <="таблица стилей" href="css\styles.css">
-
+<!DOCTYPE html>
+<html lang="Ru-Ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Шаблон страницы</title>
+    <meta name="description" content="The HTML5 sample">
+    <meta name="author" content="from internet">
+    <link rel="stylesheet" href="css\styles.css">
+    
 </head>
-<тело>
-    выровнять заголовок <="center" style="цвет фона: светло-золотисто-желтый;">
-    >h1<Медицинский факультет</h1>
-    >h2<Кафедра медицины и экспериментальной биологии</h2>
+<body>
+    <header align="center" style="background-color:rgb(210, 218, 250);">
+    <h1>Медицинский факультет</h1>
+    <h2>Кафедра медицины и экспериментальной биологии</h2>
     <hr>
-    выровнять навигацию <="по центру" style="цвет фона: хаки;">
- Меню:[
-        href a <="http://google.com ">Google</a>
-        href a <="http://yandex.com ">Яндекс</a>
-        href a <="http://rambler.ru ">Рамблер</a>]
+    <nav align="center" style="background-color:rgb(142, 240, 140);">
+        Меню:[
+        <a href="http://google.com">Google</a>
+        <a href="http://yandex.com">Yandex</a>
+        <a href="http://rambler.ru">Rambler</a>]
     </nav>
-</заголовок>
-    >p<Текст</p>
-    стиль нижнего колонтитула <="цвет фона: navajowhite;">
+</header>
+    <p>Текст</p>
+    <footer style="background-color:rgb(225, 219, 209);">
         <hr>
-        >p<Разработка - студенты 2-го курса</p>
-    <нижний колонтитул>
-    <сценарий>scr="js\scripts.js "</script>
-
+        <p>Разработка - студенты 2-го курса</p>
+    </footer>
+    <script>scr="js\scripts.js"</script>
+    
 </body>
 </html>
